--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/setup-node@v1.1.0
 
     # Runs a single command using the runners shell
-    - name: Install dependencies
+    - name: Build bundle
       run: |
-        npm install
+        npm ci
         npm run build
